--- a/sections/index.html
+++ b/sections/index.html
@@ -101,12 +101,12 @@
         <div class="item" title="鼠标停止移动并超时后触发点击事件"><strong>自动鼠标点击（Alt+F1）</strong></div>
         <label><input id="auto-click-off" name="autoClick" type="radio" value="off" checked><span>关闭</span></label>
         <label><input id="auto-click-on" name="autoClick" type="radio" value="on"><span>开启</span></label>
-        <label for="timeout">超时<input type="text" class="number" name="timeout" id="timeout" value="300" maxlength="7"><span>毫秒点击</span></label>
+        <label for="timeout">超时<input type="number" class="number" name="timeout" id="timeout" value="300" maxlength="7"><span>毫秒点击</span></label>
     </div>
 </form>
 
 <footer>
-    <span id="project-link" title="访问项目">Mouse Finger - v1.0.0</span>
+    <span id="project-link" title="访问项目">Mouse Finger by Chiroc - v1.0.0</span>
 </footer>
 
 <script>
